--- a/src/global.css
+++ b/src/global.css
@@ -10,6 +10,19 @@ body {
   background: #20232a;
 }
 
+button {
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+input {
+  box-sizing: border-box;
+}
+
+h1 {
+  color: #09d3ac;
+}
+
 a {
   text-decoration: none;
 }
