changed website color scheme

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -4,7 +4,7 @@ header#main-header {
     height: 72px;
     top: 0px;
     background: #20232a;
-    border-bottom: 1px solid #09d3ac;
+    border-bottom: 1px solid #ffffff;
 }
 
 header#main-header .header-content {
