--- a/src/pages/Done.css
+++ b/src/pages/Done.css
@@ -31,7 +31,7 @@ div#done-wrapper p {
 
 div#done-wrapper button {
     background: none;
-    border: 1px solid #09d3ac;
+    border: 1px solid #ffffff;
     border-radius: 15px;
     color: #09d3ac;
     font-size: 14px;
